--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 align="center"> Hey yo all! <img src = "https://raw.githubusercontent.com/MartinHeinz/MartinHeinz/master/wave.gif" width = 50px> </h1>
+    <h1 align="center"> Yo Guys </h1>
 <p align='center'>
 
 </p>
@@ -16,9 +16,9 @@
 ![Ipann's GitHub stats](https://github-readme-stats.vercel.app/api?username=KangIpann&show_icons=true&theme=cobalt)
 ![Ipann's Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=KangIpann&theme=cobalt&layout=compact)
 
-<h2> About Me <img src = "https://media0.giphy.com/media/KDDpcKigbfFpnejZs6/giphy.gif?cid=ecf05e47oy6f4zjs8g1qoiystc56cu7r9tb8a1fe76e05oty&rid=giphy.gif" width = 100px></h2>
+<h2> About Me </h2>
 
-<img width="55%" align="right" alt="Github" src="https://raw.githubusercontent.com/onimur/.github/master/.resources/git-header.svg" />
+
 
 - 🏫 I'm Telkom Malang Senior High School student
 
@@ -36,7 +36,7 @@
 <a href= https://github.com/KangIpann?tab=repositories&q=&type=&language=kotlin&sort= > <img width ='32px' src ='https://raw.githubusercontent.com/rahulbanerjee26/githubAboutMeGenerator/main/icons/kotlin.svg'> </a>
 <a href= https://github.com/KangIpann?tab=repositories&q=&type=&language=html&sort= > <img width ='32px' src ='https://raw.githubusercontent.com/rahulbanerjee26/githubAboutMeGenerator/main/icons/html.svg'> </a>
 <a href= https://github.com/KangIpann?tab=repositories&q=&type=&language=css&sort= > <img width ='32px' src ='https://raw.githubusercontent.com/rahulbanerjee26/githubAboutMeGenerator/main/icons/css.svg'> </a>
-<a href= https://github.com/KangIpann?tab=repositories&q=&type=&language=javascript&sort= > <img width ='32px' src ='https://raw.githubusercontent.com/rahulbanerjee26/githubAboutMeGenerator/main/icons/javascript.svg'> </a>
+
 
 <h2> Connect with me <img src='https://raw.githubusercontent.com/ShahriarShafin/ShahriarShafin/main/Assets/handshake.gif' width="100px"> </h2>
 <a target="_blank" href = 'https://www.twitter.com/@KangIpannn'> <img width = '32px' align= 'center' src="https://raw.githubusercontent.com/rahulbanerjee26/githubAboutMeGenerator/main/icons/twitter.svg"/></a> 
